--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "quote-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "API for inspirational Indian quotes with rate limiting",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["quotes", "indian", "api"],
+  "author": "Your Name",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.0",
+    "cors": "^2.8.5"
   }
 }
